--- a/index.html
+++ b/index.html
@@ -232,12 +232,10 @@
                                     title="Ferns"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
                         <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Nico"
                                     title="Nico"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Child and Beach"
-                                    title="Child and Beach"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Child and Beach" title="Child and Beach"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
                     </ul>
                     <ul id="col-3">
-                        <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Ancient and modern"
-                                    title="Ancient and Modern"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a>
+                        <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a>
                         </li>
                         <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Felix"
                                     title="Felix"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
