--- a/index.html
+++ b/index.html
@@ -118,7 +118,6 @@
     <div class="row">
         <div class="col-12">
             <img id="kite" src="img/kite.png">
-
             <nav class="data" id="gallerypagenav">
                 <ul>
                     <li class="btn"><a href="#">Page Two</a></li>
@@ -218,7 +217,7 @@
         <div class="col-11">
             <h2>Get ready for take off!</h2>
             <div class="data" id="gallerypagemidcol-2">
-                <div id="gallerypagegallery-block">
+                <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
@@ -248,7 +247,7 @@
         <div class="col-3">
             <img id="take-off" src="img/take-off.png">
             <div id="gallerypagemidcol-3">
-                <div id="gallerypagegallery-block">
+                <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
@@ -263,12 +262,12 @@
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Nico"
                                     title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103"
-                                    alt="Child and Beach" title="Child and Beach"><img class="hid"
+                                    alt="Child and Beach" title="Child and Beach"><img class="hid"
                                     src="images/childbeachbig.jpg" alt=""></a></li>
                     </ul>
                     <ul id="col-3">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103"
-                                    alt="Ancient and modern" title="Ancient and Modern"><img class="hid"
+                                    alt="Ancient and modern" title="Ancient and Modern"><img class="hid"
                                     src="images/ancientbig.jpg" alt=""></a></li>
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Felix"
                                     title="Felix"><img class="hid" src="images/felixbig.jpg" alt=""></a></li>
@@ -299,12 +298,12 @@
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Nico"
                                     title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103"
-                                    alt="Child and Beach" title="Child and Beach"><img class="hid"
+                                    alt="Child and Beach" title="Child and Beach"><img class="hid"
                                     src="images/childbeachbig.jpg" alt=""></a></li>
                     </ul>
                     <ul id="col-3">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103"
-                                    alt="Ancient and modern" title="Ancient and Modern"><img class="hid"
+                                    alt="Ancient and modern" title="Ancient and Modern"><img class="hid"
                                     src="images/ancientbig.jpg" alt=""></a></li>
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Felix"
                                     title="Felix"><img class="hid" src="images/felixbig.jpg" alt=""></a></li>
@@ -332,12 +331,12 @@
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Nico"
                                     title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103"
-                                    alt="Child and Beach" title="Child and Beach"><img class="hid"
+                                    alt="Child and Beach" title="Child and Beach"><img class="hid"
                                     src="images/childbeachbig.jpg" alt=""></a></li>
                     </ul>
                     <ul id="col-3">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103"
-                                    alt="Ancient and modern" title="Ancient and Modern"><img class="hid"
+                                    alt="Ancient and modern" title="Ancient and Modern"><img class="hid"
                                     src="images/ancientbig.jpg" alt=""></a></li>
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Felix"
                                     title="Felix"><img class="hid" src="images/felixbig.jpg" alt=""></a></li>
@@ -367,12 +366,12 @@
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Nico"
                                     title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103"
-                                    alt="Child and Beach" title="Child and Beach"><img class="hid"
+                                    alt="Child and Beach" title="Child and Beach"><img class="hid"
                                     src="images/childbeachbig.jpg" alt=""></a></li>
                     </ul>
                     <ul id="col-3">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103"
-                                    alt="Ancient and modern" title="Ancient and Modern"><img class="hid"
+                                    alt="Ancient and modern" title="Ancient and Modern"><img class="hid"
                                     src="images/ancientbig.jpg" alt=""></a></li>
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Felix"
                                     title="Felix"><img class="hid" src="images/felixbig.jpg" alt=""></a></li>
