--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         <div class="col-3">
             <img id="orange-globe" src="img/orange-globe.png">
             <div id="gallerypagemidcol-5">
-                <div id="gallerypagegallery-block">
+                <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
