--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         <div class="col-11">
             <h2>Above the clouds &amp; over the sea.</h2>
             <div id="gallerypagemidcol-6">
-                <div id="gallerypagegallery-block">
+                <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
