--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                 <br class="clear">
                 <p class="advert">Web Design by <br> Orris Baker jr</p>
             </div>
-            <div class="data" id="gallerypagemidcol">
-                <div id="gallery-block">
+            <div class="data" id="midcol-2">
+                <div id="gallery-block-2">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="../orris0/images/bda.jpg" alt=""></a></li>
@@ -180,8 +180,8 @@
     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
         <div class="col-12">
             <img id="paper" src="img/paper.png">
-            <div class="data" id="gallerypagemidcol-1">
-                <div id="gallery-block">
+            <div class="data" id="midcol-3">
+                <div id="gallery-block-3">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/bda-10.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="../orris0/bda-10.jpg" alt=""></a></li>
@@ -216,8 +216,8 @@
     <div class="row" style="background-color: #F6931E;">
         <div class="col-11">
             <h2>Get ready for take off!</h2>
-            <div class="data" id="gallerypagemidcol-2">
-                <div id="gallery-block">
+            <div class="data" id="midcol-4">
+                <div id="gallery-block-4">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
@@ -246,8 +246,8 @@
         </div> <!-- end col-11 -->
         <div class="col-3">
             <img id="take-off" src="img/take-off.png">
-            <div id="gallerypagemidcol-3">
-                <div id="gallery-block">
+            <div id="midcol-5">
+                <div id="gallery-block-5">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
@@ -282,8 +282,8 @@
     <div class="row" style="background-color: #1ABC9C;">
         <div class="col-11">
             <h2>We're flying around the globe.</h2>
-            <div id="gallerypagemidcol-4">
-                <div id="gallery-block">
+            <div id="midcol-6">
+                <div id="gallery-block-6">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
@@ -315,8 +315,8 @@
         </div>
         <div class="col-3">
             <img id="orange-globe" src="img/orange-globe.png">
-            <div id="gallerypagemidcol-5">
-                <div id="gallery-block">
+            <div id="midcol-7">
+                <div id="gallery-block-7">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
@@ -350,8 +350,8 @@
     <div class="row" style="background-color: #E5EF3F;">
         <div class="col-11">
             <h2>Above the clouds &amp; over the sea.</h2>
-            <div id="gallerypagemidcol-6">
-                <div id="gallery-block">
+            <div id="midcol-8">
+                <div id="gallery-block-8">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
