--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Test page for A full page roll-over gallery</title>
     <meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
     <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8" />
     <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="scripts.js"></script>
@@ -41,12 +43,6 @@
     <meta property="og:audio:type" content="audio/mpeg">
     <meta property="og:audio" content="https://example.com/bond/theme.mp3">
     <meta property="og:description" content=" The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
-    <!-- <link rel="stylesheet" type="text/css" href="starter-page-style-2.css">
-    <link rel="stylesheet" type="text/css" href="CSS/HTML5-style-2.css">
-    <!-- Optional Metadata -->
-    <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> --
-    <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css"> -->
-	<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.8.0/normalize.min.css">
     <link rel="stylesheet" href="../orris0/CSS/css/font-awesome.min.css">
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
