--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <br class="clear">
                 <p class="advert">Web Design by <br> Orris Baker jr</p>
             </div>
-            <div class="data" id="midcol-2">
+            <div class="data" id="gallerypagemidcol">
                 <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
@@ -242,7 +242,7 @@
         <div class="col-11">
             <h2>Get ready for take off!</h2>
             <div class="data" id="midcol-4">
-                <div id="gallery-block-4">
+                <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
@@ -272,7 +272,7 @@
         <div class="col-3">
             <img id="take-off" src="img/take-off.png">
             <div id="midcol-5">
-                <div id="gallery-block-5">
+                <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
@@ -308,7 +308,7 @@
         <div class="col-11">
             <h2>We're flying around the globe.</h2>
             <div id="midcol-6">
-                <div id="gallery-block-6">
+                <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
@@ -341,7 +341,7 @@
         <div class="col-3">
             <img id="orange-globe" src="img/orange-globe.png">
             <div id="midcol-7">
-                <div id="gallery-block-7">
+                <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
