--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             <h1>StarTrackr!</h1>
         </div>
     </header>
+    <br class="clear">
     <!--close top section - content area starts -->
     <div id="content">
         <h2>Award winning accommodation, self catering or bed and breakfast</h2>
