--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
                     <li class="btn"><a href="#">Home Page</a></li>
                 </ul>
             </nav>
+        </div> <!-- end col-12 -->
+    </div><!-- end class-row -->
             <div id="gallerypagerightcol">
                 Startrackr<br><br>
                 <p><a href="https://validator.w3.org/check?uri=referer">
@@ -173,8 +175,7 @@
                     </ul><br class="clear">
                 </div><!--gallery block closed-->
             </div><!--midcol closed-->
-        </div>
-    </div>
+        
 
     <div class="row">
         <div class="col-12" style="padding: 2%;">
