--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
     <div class="row">
         <div class="col-12">
             <img id="kite" src="img/kite.png">
-            <nav class="data" id="gallerypagenav">
+            <!-- <nav class="data" id="gallerypagenav">
                 <ul>
                     <li class="btn"><a href="#">Page Two</a></li>
                     <li class="btn"><a href="#">Page Three</a></li>
                     <li class="btn"><a href="#">Page Four</a></li>
                     <li class="btn"><a href="#">Home Page</a></li>
                 </ul>
-            </nav>
+            </nav> -->
         </div> <!-- end col-12 -->
     </div><!-- end class-row -->
     <!--close top section - content area starts -->
