--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -87,7 +87,7 @@
         </ul>
     </nav>
     <div id="gallerypagerightcol">
-        Secondary information<br><br>
+        StarTrackr<br><br>
         <p><a href="http://validator.w3.org/check?uri=referer">
             <img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5"></a>
         </p>
