--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -78,6 +78,7 @@
         <h1>A full page roll-over gallery of greetings cards</h1>
         <h2>Hover the mouse over a small picture to see an enlarged version</h2>
     </header>
+    <br class="clear">
     <nav class="data" id="gallerypagenav">
         <ul>
             <li class="btn"><a href="#">Page Two</a></li>
