--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -87,6 +87,7 @@
             <li class="btn"><a href="#">Home Page</a></li>
         </ul>
     </nav>
+    <br class="clear">
     <div id="gallerypagerightcol">
         StarTrackr<br><br>
         <p><a href="http://validator.w3.org/check?uri=referer">
