--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -100,7 +100,7 @@
         <br class="clear">
         <p class="advert">Web Design by Orris Baker</p></div>
         <div id="gallerypagemidcol">
-            <div id="gallerypagegallery-block">
+            <div id="gallery-block">
                 <ul id="col-1">
                     <li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
                     <li><a href="#"><img src="images/catthumb.jpg" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
