--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Gallery-page-Templates</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-    <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
+    <!-- <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8"> -->
     <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="scripts.js"></script>
     <script type="text/javascript" src="js/jquery-1.7.js"></script>
