--- a/index.html
+++ b/index.html
@@ -72,14 +72,6 @@
     <div class="row">
         <div class="col-12">
             <img id="kite" src="img/kite.png">
-            <!-- <nav class="data" id="gallerypagenav">
-                <ul>
-                    <li class="btn"><a href="#">Page Two</a></li>
-                    <li class="btn"><a href="#">Page Three</a></li>
-                    <li class="btn"><a href="#">Page Four</a></li>
-                    <li class="btn"><a href="#">Home Page</a></li>
-                </ul>
-            </nav> -->
         </div> <!-- end col-12 -->
     </div><!-- end class-row -->
     <!--close top section - content area starts -->
@@ -132,7 +124,7 @@
         <p class="advert">Web Design by <br> Orris Baker jr</p>
     </div>
     <div class="data" id="gallerypagemidcol">
-        <div id="gallerypagemidcol-block">
+        <div class="data" id="gallerypagemidcol-block">
             <ul id="col-1">
                 <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali" title="Ali"><img
                             class="hid" src="../orris0/images/bda.jpg" alt=""></a></li>
