--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <div class="row" style="background-color: #1ABC9C;">
         <div class="col-11">
             <h2>We're flying around the globe.</h2>
-            <div id="midcol-6">
+            <!-- <div id="midcol-6">
                 <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
@@ -295,12 +295,12 @@
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Cliffs"
                                     title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                     </ul><br class="clear">
-                </div><!--gallery block closed-->
+                </div><!--gallery block closed--
             </div><!--midcol closed -->
         </div>
         <div class="col-3">
             <img id="orange-globe" src="img/orange-globe.png">
-            <div id="midcol-7">
+            <!-- <div id="midcol-7">
                 <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
@@ -328,14 +328,14 @@
                         <li><a href="#"><img src="../orris0/images/bda.jpg" vwidth="70" height="103" alt="Cliffs"
                                     title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                     </ul><br class="clear">
-                </div><!--gallery block closed-->
+                </div><!--gallery block closed--
             </div><!--midcol closed -->
         </div>
     </div>
     <div class="row" style="background-color: #E5EF3F;">
         <div class="col-11">
             <h2>Above the clouds &amp; over the sea.</h2>
-            <div id="midcol-8">
+            <!-- <div id="midcol-8">
                 <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
