--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -255,31 +255,7 @@
                         </div>
 
                     </div>
-            </div> <!-- end col-3 --
-            <div id="container">
-                <p>&nbsp;</p>
-                <p>Tour Orris (default)</p>
-                <p>
-                    <a href="../orris0/HTML5-Ch1-7.html">Page 1</a>
-                    <a href="html5-nav.html">Page 2</a>
-                    <a href="simplistic-side-by-side.html">Page 3</a>
-                    <a href="simplistic-html5-java.html">Page 4</a>
-                    <a href="simplistic-html5.html">Page 5</a>
-                    <a href="gallery-one-col.html">Page 6</a>
-                    <a href="gallery-2col.html">Page 7</a>
-                </p>
-                <p>&nbsp;</p>
-                <p class="inline-block">Practical HTML5 Project&#39;s<br>
-                    <a href="gallery-3col-mix.html">Page 1</a>
-                    <a href="gallery-page-validated.html">Page 2</a>
-                    <a href="squares-html5.html">Page 3</a>
-                    <a href="horiz-vert-menu.html">Page 4</a>
-                    <a href="fig2-nifty.html">Page 5</a>
-                    <a href="starter-page.html">Page 6</a>
-                    <a href="index2.html">Page 7</a>
-                </p>
-                <p>&nbsp;</p>
-            </div> -->
+            </div> <!-- end col-3 -->
 
             <section id="unsubscribe" class="unsubscribe-form content-section text-center">
                 <div class="block text-center">
