--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
         <div class="col-12">
             <img id="paper" src="img/paper.png">
-            <div class="data" id="midcol-3">
+            <!-- <div class="data" id="midcol-3">
                 <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/bda-10.jpg" width="70" height="103" alt="Ali"
@@ -191,7 +191,7 @@
                         <li><a href="#"><img src="../orris0/bda-18.jpg" width="70" height="103" alt="Cliffs"
                                     title="Cliffs"><img class="hid" src="../orriso/bda-18.jpg" alt=""></a></li>
                     </ul><br class="clear">
-                </div><!--gallery block closed-->
+                </div><!--gallery block closed--
             </div><!--midcol closed-->
         </div>
     </div>
