--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <div class="row" style="background-color: #F6931E;">
         <div class="col-11">
             <h2>Get ready for take off!</h2>
-            <div class="data" id="midcol-4">
+            <!-- <div class="data" id="midcol-4">
                 <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Ali"
@@ -226,7 +226,7 @@
                         <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Cliffs"
                                     title="Cliffs"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
                     </ul><br class="clear">
-                </div><!--gallery block closed-->
+                </div><!--gallery block closed--
             </div><!--midcol closed-->
         </div> <!-- end col-11 -->
         <div class="col-3">
