--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </div> <!-- end col-11 -->
         <div class="col-3">
             <img id="take-off" src="img/take-off.png">
-            <div id="midcol-5">
+            <!-- <div id="midcol-5">
                 <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
@@ -259,7 +259,7 @@
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Cliffs"
                                     title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                     </ul><br class="clear">
-                </div><!--gallery block closed-->
+                </div><!--gallery block closed--
             </div><!--midcol closed-->
         </div>
     </div>
