--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 
 <body>
-    <header class="data" id="html5styleheader"><!--<div id="hdr"> changed to <header>-->
+    <header class="data" id="html5style2header"><!--<div id="hdr"> changed to <header>-->
         <div id="banner">
             <h1>StarTrackr!</h1>
         </div>
@@ -76,14 +76,14 @@
         </div> <!-- end col-12 -->
     </div><!-- end class-row -->
     <!--close top section - content area starts -->
-    <div id="content">
+    <div id="html5style2content">
         <h2>Award winning accommodation, self catering or bed and breakfast</h2>
-        <div id="leftcol">
+        <div id="html5style2leftcol">
             <h3>Cottages, converted barns, caravans</h3>
             <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
             <br>The superb interior of one of our cottages
         </div>
-        <nav><!--use the semantic tag <nav>-->
+        <nav class="data" id=html5style2nav><!--use the semantic tag <nav>-->
             <ul><!--start of menu list-->
                 <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                 <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
@@ -93,8 +93,8 @@
                 <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
             </ul><!--end of menu list-->
         </nav><!--</div> removed and replaced with </nav>-->
-        <div id="midcol">
-            <h3>Situated in the BDA's beautiful countryside</h3>
+        <div id="html5style2midcol">
+            <h3 id="html5style2-h3>Situated in the BDA's beautiful countryside</h3>
             <img title="BDA's beautiful countryside" alt="BDA's beautiful countryside" src="images/bda.gif" height="229"
                 width="398">
         </div>
