--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div><!-- end class-row -->
     <!--close top section - content area starts -->
     <div id="html5style2content">
-        <h2>Award winning accommodation, self catering or bed and breakfast</h2>
+        <h2 id="html5style2-h2>Award winning accommodation, self catering or bed and breakfast</h2>
         <div id="html5style2leftcol">
             <h3>Cottages, converted barns, caravans</h3>
             <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
