--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -75,8 +75,8 @@
     <![endif]-->
 </head>
 <body>
-    <header>
-        <h1>A full page roll-over gallery of greetings cards</h1>
+    <header id="gallerypageheader>
+        <h1 id="gallerypage-h1>A full page roll-over gallery of greetings cards</h1>
         <h2>Hover the mouse over a small picture to see an enlarged version</h2>
     </header>
     <br class="clear">
@@ -89,7 +89,7 @@
         </ul>
     </nav>
     <br class="clear">
-    <div id="gallerypagerightcol">
+    <div class="data" id="gallerypagerightcol">
         StarTrackr<br><br>
         <p><a href="http://validator.w3.org/check?uri=referer">
             <img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5"></a>
@@ -101,7 +101,7 @@
         <br class="clear">
         <p class="advert">Web Design by Orris Baker</p></div>
         <div id="gallerypagemidcol">
-            <div id="gallery-block">
+            <div class="data" id="gallerypagegallery-block">
                 <ul id="col-1">
                     <li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
                     <li><a href="#"><img src="images/catthumb.jpg" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
