--- a/index.html
+++ b/index.html
@@ -64,11 +64,15 @@
 </head>
 
 <body>
-    <header class="data" id="html5style2header"><!--<div id="hdr"> changed to <header>-->
-        <div id="banner">
-            <h1>StarTrackr!</h1>
-        </div>
-    </header>
+    <div class="row">
+        <div class="col-12">
+            <header class="data" id="html5style2header"><!--<div id="hdr"> changed to <header>-->
+                <div id="banner">
+                    <h1>StarTrackr!</h1>
+                </div>
+            </header>
+        </div><!-- end col-12 -->
+    </div><!-- end .row -->
     <br class="clear">
     <div class="row">
         <div class="col-12">
