--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <header id="gallerypageheader>
-        <h1 id="gallerypage-h1>A full page roll-over gallery of greetings cards</h1>
+        <h1>A full page roll-over gallery of greetings cards</h1>
         <h2>Hover the mouse over a small picture to see an enlarged version</h2>
     </header>
     <br class="clear">
