--- a/index.html
+++ b/index.html
@@ -97,45 +97,7 @@
         </div>
         <br class="clear">
     </div><!--content section closed-->
-            <!-- <header class="data" id="html5style2header"><!--<div id="hdr"> changed to <header>--
-                <div id="banner">
-                    <h1>StarTrackr!</h1>
-                </div>
-            </header>
-        </div><!-- end col-12 --
-    </div><!-- end .row --
-    <br class="clear">
-    <div class="row">
-        <div class="col-12">
-            <img id="kite" src="img/kite.png">
-        </div> <!-- end col-12 --
-    </div><!-- end class-row -->
-    <!--close top section - content area starts --
-    <div id="html5style2content">
-        <h2 id="html5style2-h2>Award winning accommodation, self catering or bed and breakfast</h2>
-        <div id="html5style2leftcol">
-            <h3>Cottages, converted barns, caravans</h3>
-            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
-            <br>The superb interior of one of our cottages
-        </div>
-        <nav class="data" id=html5style2nav><!--use the semantic tag <nav>--
-            <ul><!--start of menu list--
-                <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-                <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                <li class="btn"><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
-                <li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
-                <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
-                <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-            </ul><!--end of menu list--
-        </nav><!--</div> removed and replaced with </nav>--
-        <div id="html5style2midcol">
-            <h3 id="html5style2-h3>Situated in the BDA's beautiful countryside</h3>
-            <img title="BDA's beautiful countryside" alt="BDA's beautiful countryside" src="images/bda.gif" height="229"
-                width="398">
-        </div>
-        <br class="clear">
-    </div><!--content section closed-->
-
+            
     <nav class="data" id="gallerypagenav">
         <ul>
             <li class="btn"><a href="#">Page Two</a></li>
@@ -147,20 +109,13 @@
 
     <div id="gallerypagerightcol">
         Startrackr<br><br>
-        <p><a href="https://validator.w3.org/check?uri=referer">
-                <img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64"
-                    alt="Validated HTML5" title="Validated HTML5"></a>
-        </p>
-        <p>
-            <a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88" height="31"
-                    title="Valid CSS!" alt="Valid CSS!"></a><span class="small"><br><br>Markup
-                Validated by the World Wide Web Consortium</span>
-        </p>
+        <p><a href="https://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5"></a></p>
+        <p><a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88" height="31" title="Valid CSS!" alt="Valid CSS!"></a><span class="small"><br><br>Markup Validated by the World Wide Web Consortium</span></p>
         <br class="clear">
-        <p class="advert">Web Design by <br> Orris Baker jr</p>
+        <p class="advert">Web Design by <br> Orris Baker Jr</p>
     </div>
     <div class="data" id="gallerypagemidcol">
-        <div class id="gallerypagemidcol-block">
+        <div class midcol-block">
             <ul id="col-1">
                 <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali" title="Ali"><img
                             class="hid" src="../orris0/images/bda.jpg" alt=""></a></li>
