--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Gallery-page-Templates</title>
     <meta charset="UTF-8">
-   <!-- <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css"> -->
-    <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-    <!-- <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css"> -->
+	<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+    <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
     <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" src="js/scripts.js"></script>
+    <script type="text/javascript" src="scripts.js"></script>
     <script type="text/javascript" src="js/jquery-1.7.js"></script>
     <!-- <script type="text/javascript" src="../orris0/js/script.js"></script> -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -57,10 +57,7 @@
         rel="stylesheet" type="text/css">
     <!-- SimpleLightbox plugin CSS-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
-    <!--Add conditional Javascript-->
-    <!--[if lte IE 8]>
-        <script src="js/html5.js" type="text/javascript"></script>
-    <![endif]-->
+
 </head>
 
 <body>
