--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -62,7 +62,7 @@
 
 <body>
     
-    <header class="data" id="html5styleheader"><!--<div id="hdr"> changed to <header>-->
+    <header class="data" id="html5style2header"><!--<div id="hdr"> changed to <header>-->
         <div id="banner">
             <h1>StarTrackr!</h1>
         </div>
@@ -70,7 +70,7 @@
 	<br class="clear">
     <!--close top section - content area starts -->
     
-    <div id="content">
+    <div class="data" id="html5style2content">
         <h2>Award winning accommodation, self catering or bed and breakfast</h2>
         <div id="leftcol">
             <h3>Cottages, converted barns, caravans</h3>
