--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -63,7 +63,7 @@
 <body>
     
     <header class="data" id="html5style2header"><!--<div id="hdr"> changed to <header>-->
-        <div id="banner">
+        <div <div class="data" id="html5style2banner">
             <h1>StarTrackr!</h1>
         </div>
     </header>
@@ -72,12 +72,12 @@
     
     <div class="data" id="html5style2content">
         <h2>Award winning accommodation, self catering or bed and breakfast</h2>
-        <div id="leftcol">
+        <div class="data" id="leftcol">
             <h3>Cottages, converted barns, caravans</h3>
-            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+            <img class="data" id="html5style2img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
             <br>The superb interior of one of our cottages
         </div>
-        <nav><!--use the semantic tag <nav>-->
+        <nav class="data" id="html5style2nav><!--use the semantic tag <nav>-->
             <ul><!--start of menu list-->
                 <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                 <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
@@ -87,9 +87,9 @@
                 <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
             </ul><!--end of menu list-->
         </nav><!--</div> removed and replaced with </nav>-->
-        <div id="midcol">
+        <div class="data" id="html5style2midcol">
             <h3>Situated in the BDA's beautiful countryside</h3>
-            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+            <img class="data" id="html5style2img-1 title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
         </div>
         <br class="clear">
     </div><!--content section closed-->
