--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -72,7 +72,7 @@
     
     <div class="data" id="html5style2content">
         <h2>Award winning accommodation, self catering or bed and breakfast</h2>
-        <div class="data" id="leftcol">
+        <div class="data" id="html5style2leftcol">
             <h3>Cottages, converted barns, caravans</h3>
             <img class="data" id="html5style2img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
             <br>The superb interior of one of our cottages
