--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -2,7 +2,8 @@
 <!doctype html>
     <html ng-app lang="en">
         <head>
-            <title>Test page for semantic tags </title>
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <title>Test page for A full page roll-over gallery</title>
             <meta charset="utf-8">
             <link rel=”stylesheet” type=”text/css” href="HTML5-style-2.css">
             <!--conditional Javascript added--
