--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -1,4 +1,4 @@
-<!-- Listing 1-7a. The new HTML5 listing (HTML5-Ch1-7.html) --
+<!-- Listing 1-7a. The new HTML5 listing (HTML5-Ch1-7.html) -->
 <!doctype html>
     <html ng-app lang="en">
         <head>
@@ -431,6 +431,8 @@
             </div>
         </div>
     </footer>
+	<script type="text/javascript" src="js/jquery-1.7.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
