--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -8,7 +8,7 @@
             <link rel=”stylesheet” type=”text/css” href="HTML5-style-2.css">
             <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
             <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-            <script type="text/javascript" src="scripts.js"></script>
+            <script type="text/javascript" src="script.js"></script>
             <script type="text/javascript" src="js/jquery-1.7.js"></script>
             <!-- <script type="text/javascript" src="../orris0/js/script.js"></script> -->
             <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -58,41 +58,43 @@
             <!--conditional Javascript added-->
             <!--[if lte IE 8]>
                 <script src="html5.js"></script>
-            <![endif]--
+            <![endif]-->
         </head>
         <body>
-        <header><!--<div id="hdr"> changed to <header>--
+        <header><!--<div id="hdr"> changed to <header>-->
             <h1>StarTrackr!</h1>
         </header>
-        <!--close top section - content area starts --
+        <!--close top section - content area starts -->
         <div id="content">
             <h2>Award winning accommodation, self catering or bed and breakfast</h2>
             <div id="leftcol">
                 <h3>Cottages, converted barns, caravans</h3>
                 <img alt="Cottage interior" title="Cottage interior" height="225" src="images/cotdining300.jpg" width="300"><br>The superb interior of one of our cottages
             </div>
-            <nav><!--use the semantic tag <nav>--
-                <ul><!--start of menu list--
+            <nav><!--use the semantic tag <nav>-->
+                <ul><!--start of menu list-->
                     <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                     <li class="btn"><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
                     <li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
                     <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
                     <li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
-                </ul><!--end of menu list--
-            </nav><!--</div> removed and replaced with </nav>--
+                </ul><!--end of menu list-->
+            </nav><!--</div> removed and replaced with </nav>-->
         <div id="midcol">
             <h3>Situated in the UK's beautiful Devon countryside</h3>
             <img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg" height="229" width="398">
         </div>
         <br class="clear">
         </div><!--content section closed-->
-        <!--<div id=footer"> changed to <footer>--
+        <!--<div id=footer"> changed to <footer>-->
         <footer><p>Footer goes here</p>
         </footer>
+		<script type="text/javascript" src="js/jquery-1.7.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
     </body>
 </html>
--->
+<!--
 <!DOCTYPE html>
 <html ng-app lang="en">
 <head>
@@ -100,13 +102,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Test page for A full page roll-over gallery</title>
     <meta charset="UTF-8">
-	<!-- <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css"> --
 	<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
     <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
     <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="scripts.js"></script>
     <script type="text/javascript" src="js/jquery-1.7.js"></script>
-    <!-- <script type="text/javascript" src="../orris0/js/script.js"></script> -->
+    <!-- <script type="text/javascript" src="../orris0/js/script.js"></script> --
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="format-detection" content="telephone=no">
     <meta property="og:title" content="A Basic HTML5 Template">
@@ -134,7 +136,7 @@
     <meta property="og:type" content="video.movie">
     <meta property="og:url" content="https://orris0.github.io/orris0/index.html">
     <meta property="og:image" content="image.png">
-    <!-- Optional Metadata-->
+    <!-- Optional Metadata--
     <meta property="og:audio:type" content="audio/mpeg">
     <meta property="og:audio" content="https://example.com/bond/theme.mp3">
     <meta property="og:description" content=" The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
@@ -144,26 +146,26 @@
     <link rel="alternate" type="application/pdf" href="MainPage.pdf">
     <link rel="author" href="mailto:bakerorris0@gmail.com">
     <link rel="author" type="text/html" href="https://orris0.github.io/orris0/index.html">
-    <!-- Bootstrap Icons-->
+    <!-- Bootstrap Icons--
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- Google fonts-->
+    <!-- Google fonts--
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
         rel="stylesheet" type="text/css">
-    <!-- SimpleLightbox plugin CSS-->
+    <!-- SimpleLightbox plugin CSS--
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
 
 </head>
 
 <body>
     
-    <header class="data" id="html5style2header"><!--<div id="hdr"> changed to <header>-->
+    <header class="data" id="html5style2header"><!--<div id="hdr"> changed to <header>--
         <div <div class="data" id="html5style2banner">
             <h1>StarTrackr!</h1>
         </div>
     </header>
 	<br class="clear">
-    <!--close top section - content area starts -->
+    <!--close top section - content area starts --
     
     <div class="data" id="html5style2content">
         <h2>Award winning accommodation, self catering or bed and breakfast</h2>
@@ -172,23 +174,23 @@
             <img class="data" id="html5style2img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
             <br>The superb interior of one of our cottages
         </div>
-        <nav class="data" id="html5style2nav><!--use the semantic tag <nav>-->
-            <ul><!--start of menu list-->
+        <nav class="data" id="html5style2nav><!--use the semantic tag <nav>--
+            <ul><!--start of menu list--
                 <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                 <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                 <li class="btn"><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
                 <li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
                 <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
                 <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-            </ul><!--end of menu list-->
-        </nav><!--</div> removed and replaced with </nav>-->
+            </ul><!--end of menu list--
+        </nav><!--</div> removed and replaced with </nav>--
         <div class="data" id="html5style2midcol">
             <h3>Situated in the BDA's beautiful countryside</h3>
             <img class="data" id="html5style2img-1 title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
         </div>
         <br class="clear">
     </div><!--content section closed-->
-    <!--<div id=footer"> changed to <footer>-->
+    <!--<div id=footer"> changed to <footer>--
     <footer role="contentinfo" class="row">
         <div class="footer-inner">
             <div class="col-12">
@@ -236,8 +238,8 @@
 
                 <hr class="full">
 
-            </div> <!-- end col-12 -->
-        </div> <!-- end class row -->
+            </div> <!-- end col-12 --
+        </div> <!-- end class row --
 
         <div class="row" style="background-color: #66d4ff;">
             <div class="col-12">
@@ -307,14 +309,14 @@
                         </div>
 
                     </div>
-            </div> <!-- end col-3 -->
+            </div> <!-- end col-3 --
             <div id="container">
                 <p>&nbsp;</p>
                 <p>Tour Orris (default)</p>
                 <p>
                     <a href="../orris0/HTML5-Ch1-7.html">Page 1</a>
 					<a href="gallery-page-validated.html">Page 2</a>
-                    <!-- <a href="html5-nav.html">Page 2</a> -->
+                    <!-- <a href="html5-nav.html">Page 2</a> --
                     <a href="simplistic-side-by-side.html">Page 3</a>
                     <a href="simplistic-html5-java.html">Page 4</a>
                     <a href="simplistic-html5.html">Page 5</a>
@@ -421,7 +423,7 @@
                     <li><a href="#"><i class="instagram"></i></i></a></li>
                 </ul>
             </div> <!-- end col-3 -->
-        </div> <!-- end class row -->
+        </div> <!-- end class row --
         <a href="https://orris0.github.io/orris0/index.html"
             class="back-to-top d-flex align-items-center justify-content-center"><i
                 class="bi bi-arrow-up-short"></i></a>
