--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -88,13 +88,26 @@
         <br class="clear">
         </div><!--content section closed-->
         <!--<div id=footer"> changed to <footer>-->
-        <footer><p>Footer goes here</p>
+		<footer role="contentinfo" class="row">
+            <a href="https://orris0.github.io/orris0/HTML5-Ch1-7.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+            <div class="col-12">
+                <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
+                    <div id="farewell">Come back and visit us soon!
+                        <p> &copy; Copyright 2010 CelebriTracker Productions</p>
+                    </div>
+                </div>
+            </div>
         </footer>
-		<script type="text/javascript" src="js/jquery-1.7.js"></script>
-        <script type="text/javascript" src="js/script.js"></script>
-    </body>
+            <!-- Vendor JS Files --
+			<script src="../orris0/main.js"></script> --
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+            <script src="../orris0/bootstrap.bundle.min.js"></script>
+            <script type="text/javascript" src="js/jquery-1.7.js"></script>
+            <script type="text/javascript" src="js/script.js"></script>
+    </body><!-- end body  --
+
 </html>
-<!--
+
 <!DOCTYPE html>
 <html ng-app lang="en">
 <head>
