--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -69,33 +69,31 @@
         </div>
     </header>
 	<br class="clear">
-    <!--close top section - content area starts --><!--content section closed--
-        <header><!--<div id="hdr"> changed to <header>--
-            <h1>StarTrackr!</h1>
-        </header>
-        <!--close top section - content area starts -->
-        <div id="content">
-            <h2>Award winning accommodation, self catering or bed and breakfast</h2>
-            <div id="leftcol">
-                <h3>Cottages, converted barns, caravans</h3>
-                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/cotdining300.jpg" width="300"><br>The superb interior of one of our cottages
-            </div>
-            <nav><!--use the semantic tag <nav>--
-                <ul><!--start of menu list--
-                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                    <li class="btn"><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
-                    <li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
-                    <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
-                    <li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
-                </ul><!--end of menu list--
-            </nav><!--</div> removed and replaced with </nav>--
+    <!--close top section - content area starts -->
+    
+    <div id="content">
+        <h2>Award winning accommodation, self catering or bed and breakfast</h2>
+        <div id="leftcol">
+            <h3>Cottages, converted barns, caravans</h3>
+            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+            <br>The superb interior of one of our cottages
+        </div>
+        <nav><!--use the semantic tag <nav>-->
+            <ul><!--start of menu list-->
+                <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                <li class="btn"><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
+                <li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
+                <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
+                <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+            </ul><!--end of menu list-->
+        </nav><!--</div> removed and replaced with </nav>-->
         <div id="midcol">
-            <h3>Situated in the UK's beautiful Devon countryside</h3>
-            <img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg" height="229" width="398">
+            <h3>Situated in the BDA's beautiful countryside</h3>
+            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
         </div>
         <br class="clear">
-        </div><!--content section closed-->
+    </div><!--content section closed-->
         <!--<div id=footer"> changed to <footer>-->
 		<footer role="contentinfo" class="row">
             <a href="https://orris0.github.io/orris0/HTML5-Ch1-7.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
