--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -63,7 +63,7 @@
 <body>
     <div class="row">
         <div class="col-12">
-            <header class="data" id="html5styleheader"><!--<div id="hdr"> changed to <header>-->
+            <header class="data" id="html5style2header"><!--<div id="hdr"> changed to <header>-->
         <div id="banner">
             <h1>StarTrackr!</h1>
         </div>
