--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -64,61 +64,61 @@
     <div class="row">
         <div class="col-12">
             <header class="data" id="html5style2header"><!--<div id="hdr"> changed to <header>-->
-        <div id="banner">
-            <h1>StarTrackr!</h1>
-        </div>
-    </header>
-	<br class="clear">
-    <!--close top section - content area starts -->
+                <div id="banner">
+                    <h1>StarTrackr!</h1>
+                </div>
+            </header>
+	        <br class="clear">
+            <!--close top section - content area starts -->
     
-    <div id="content">
-        <h2>Award winning accommodation, self catering or bed and breakfast</h2>
-        <div id="leftcol">
-            <h3>Cottages, converted barns, caravans</h3>
-            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
-            <br>The superb interior of one of our cottages
-        </div>
-        <nav><!--use the semantic tag <nav>-->
-            <ul><!--start of menu list-->
-                <li class="btn"> <a href="./gallery-page-validated.html" title="Accommodation">Accommodation</a></li>
-                <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                <li class="btn"><a href="./index.html" title="Frequently Asked Questions">Information</a></li>
-                <li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
-                <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
-                <li class="btn"><a href="./HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-            </ul><!--end of menu list-->
-        </nav><!--</div> removed and replaced with </nav>-->
-        <div id="midcol">
-            <h3>Situated in the BDA's beautiful countryside</h3>
-            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
-        </div>
-        <br class="clear">
-    </div><!--content section closed-->
-        <!--<div id=footer"> changed to <footer>-->
-		<footer role="contentinfo" class="row">
-            <a href="https://orris0.github.io/orris0/HTML5-Ch1-7.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-            <div class="col-12">
-                <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
-                    <div id="farewell">Come back and visit us soon!
-                        <p> &copy; Copyright 2010 CelebriTracker Productions</p>
+            <div id="content">
+                <h2>Award winning accommodation, self catering or bed and breakfast</h2>
+                <div id="leftcol">
+                    <h3>Cottages, converted barns, caravans</h3>
+                    <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                    <br>The superb interior of one of our cottages
+                </div>
+                <nav><!--use the semantic tag <nav>-->
+                    <ul><!--start of menu list-->
+                        <li class="btn"> <a href="./gallery-page-validated.html" title="Accommodation">Accommodation</a></li>
+                        <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                        <li class="btn"><a href="./index.html" title="Frequently Asked Questions">Information</a></li>
+                        <li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
+                        <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
+                        <li class="btn"><a href="./HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                    </ul><!--end of menu list-->
+                </nav><!--</div> removed and replaced with </nav>-->
+                <div id="midcol">
+                    <h3>Situated in the BDA's beautiful countryside</h3>
+                    <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                </div>
+                <br class="clear">
+            </div><!--content section closed-->
+            <!--<div id=footer"> changed to <footer>-->
+		    <footer role="contentinfo" class="row">
+                <a href="https://orris0.github.io/orris0/HTML5-Ch1-7.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+                <div class="col-12">
+                    <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
+                        <div id="farewell">Come back and visit us soon!
+                            <p> &copy; Copyright 2010 CelebriTracker Productions</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </footer>
-            <!-- Vendor JS Files --
+            </footer>
+            <!-- Vendor JS Files -->
 			<script src="../orris0/main.js"></script> --
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
             <script src="../orris0/bootstrap.bundle.min.js"></script>
             <script type="text/javascript" src="js/jquery-1.7.js"></script>
             <script type="text/javascript" src="js/script.js"></script>
-    </body><!-- end body  --
+    </body><!-- end body  -->
 
 </html>
-
+<!--
 <!DOCTYPE html>
 <html ng-app lang="en">
 <head>
-    <!-- Viewport for responsive web design --
+    Viewport for responsive web design --
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Test page for A full page roll-over gallery</title>
     <meta charset="UTF-8">
